[tool.poetry]
name = "whoop"
version = "0.1.0"
description = ""
authors = ["tdfalc <tomdfalc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
authlib = "^1.3.1"
pytz = "^2024.1"
pandas = "^2.2.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
